[project]
name = "FastAPI"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "", email = ""},
]
dependencies = ["uvicorn>=0.34.1", "fastapi>=0.115.12", "sqlalchemy>=2.0.40", "passlib>=1.7.4", "bcrypt>=4.3.0", "python-jose>=3.4.0", "python-multipart>=0.0.20"]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
package-dir='src'

[tool.pdm]
distribution = false
